# userauth

./: CMakeLists.txt  README.md
cmake/: libsodium.cmake
include/userauth/: InMemoryUserRepository.h  LogIn.h  LogInResponse.h  User.h  UserRepository.h
src/: CMakeLists.txt  InMemoryUserRepository.cpp  LogIn.cpp  User.cpp
tests/: CMakeLists.txt  login-rehash-test.cpp  login-test.cpp  user-password-validation-test.cpp  user-validity-test.cpp
