PROJECT(Userauth)

CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(USERAUTH_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "")

set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(libsodium)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)
